[workspace]
resolver = "2"

members = [
    "gpwgen",
    "gpws",
]

[profile.release]
debug = true

[workspace.dependencies]
anyhow = "*"
bincode = "*"
byteorder = "*"
clap = { version = "*", features = ["derive"] }
geo = "*"
h3o = { version = "*", features = ["geo"] }
hextree = { git = "https://github.com/JayKickliter/HexTree.git", rev = "e6923d6f147e046fead31d9fdd68130c2ec9d8b4" }
hyper = { version = "*", features = ["server", "http1", "full"] }
indicatif = "*"
rayon = "*"
tikv-jemallocator = "*"
tokio = { version = "*", features = ["full"] }
