[package]
name = "gpwgen"
version = "0.1.0"
edition = "2021"

[lib]
name = "gpwgen"
path = "src/lib.rs"

[[bin]]
name = "gpwgen"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
byteorder = { workspace = true }
clap = { workspace = true }
geo = { workspace = true }
h3o = { workspace = true }
hextree = { workspace = true }
indicatif = { workspace = true }
rayon = { workspace = true }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { workspace = true }
