[package]
name = "gpws"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "*"
bincode = "*"
byteorder = "*"
clap = {version = "*", features = ["derive"]}
hextree = {git = "https://github.com/JayKickliter/HexTree.git", rev = "c6bb8ad8328779e6c59d34f001a2f145c0eae441"}
hyper = {version = "*", features = ["server", "http1", "full"]}
indicatif = "*"
tokio = {version = "*", features = ["full"]}

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.5"
