[package]
name = "gpws"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
bincode = { workspace = true }
byteorder = { workspace = true }
clap = { workspace = true }
h3o = { workspace = true }
hextree = { workspace = true }
hyper = { workspace = true }
indicatif = { workspace = true }
tokio = { workspace = true }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { workspace = true }
